--- a/frontend/src/components/Button/index.module.scss
+++ b/frontend/src/components/Button/index.module.scss
@@ -13,6 +13,7 @@
   outline: none;
   text-align: center;
   box-shadow: $boxShadow;
+  text-transform: uppercase;
 
   &:hover {
     background-color: $colorButtonHover;
