--- a/frontend/src/containers/Contacts/index.module.scss
+++ b/frontend/src/containers/Contacts/index.module.scss
@@ -2,9 +2,52 @@
 
 
 .Contacts {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
+  width: 100%;
+
+  .ContactsHeader {
+    height: 30px;
+    margin-bottom: 20px;
+    padding: 10px;
+    cursor: pointer;
+    display: grid;
+    grid-template-columns: 5% 40% 25% 15% 15%;
+    background-color: $color3;
+    box-shadow: $boxShadow;
+  
+    .Icon {
+      min-width: 30px;
+      
+      .IconPerson {
+        background-color: $colorIcon;
+      }
+    }
+  
+    .Name {
+      line-height: 30px;
+      min-width: 150px;
+      padding: 0 10px;
+      @include ellipsis;
+      @include text16;
+      text-transform: uppercase;
+      color: $color1;
+    }
+  
+    .Phone {
+      line-height: 30px;
+      min-width: 150px;
+      padding: 0 10px;
+      @include text16;
+      text-transform: uppercase;
+      color: $color1;
+    }
+  
+    .Date {
+      line-height: 30px;
+      min-width: 150px;
+      padding: 0 10px;
+      @include text16;
+      text-transform: uppercase;
+      color: $color1;
+    }
+  }
 }
